--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "es-ts",
   "version": "0.0.1",
-  "description": "",
+  "description": "A TypeScript Express API Template with Prisma, Zod, and OpenAPI integration for robust backend development.",
   "main": "index.ts",
   "type": "module",
   "scripts": {
@@ -9,27 +9,39 @@
     "build": "tsc -p tsconfig.json",
     "start": "node --env-file .env dist/src/index.js"
   },
-  "keywords": [],
+  "keywords": [
+    "typescript",
+    "express",
+    "prisma",
+    "zod",
+    "openapi",
+    "api",
+    "backend",
+    "swagger",
+    "rest"
+  ],
   "author": "enjoy",
   "license": "ISC",
   "packageManager": "pnpm@10.9.0",
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "7.3.2",
-    "@prisma/adapter-pg": "^6.8.2",
+    "@prisma/adapter-pg": "^6.10.0",
     "@prisma/client": "6.8.2",
-    "@scalar/express-api-reference": "^0.8.1",
+    "@scalar/express-api-reference": "^0.8.4",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "pino": "^9.7.0",
     "zod": "3.25.21"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
-    "@types/express": "^5.0.2",
-    "@types/node": "^22.15.21",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/node": "^22.15.32",
     "pino-pretty": "^13.0.0",
-    "prisma": "^6.8.2",
+    "prisma": "^6.10.0",
     "ts-node": "^10.9.2",
-    "tsx": "^4.19.4",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   },
   "prisma": {
