Refactor API documentation setup and update schemas
- Changed the import of API reference options to a function that generates the configuration dynamically in app.ts.
- Updated OpenAPI version from 3.0.0 to 3.1.0 in swagger.ts and refactored the API reference options into a function.
- Simplified item schema definitions in itemSchema.ts by using built-in Zod methods for ID and datetime fields, and adjusted the creation schema to only require the name field.

--- a/package.json
+++ b/package.json
@@ -24,24 +24,25 @@
   "license": "ISC",
   "packageManager": "pnpm@10.9.0",
   "dependencies": {
-    "@asteasolutions/zod-to-openapi": "7.3.2",
-    "@prisma/adapter-pg": "^6.11.1",
+    "@asteasolutions/zod-to-openapi": "^8.1.0",
+    "@prisma/adapter-pg": "^6.16.2",
     "@prisma/client": "6.11.1",
-    "@scalar/express-api-reference": "^0.8.7",
+    "@scalar/express-api-reference": "^0.8.18",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "pino": "^9.7.0",
-    "zod": "3.25.74"
+    "pino": "^9.9.5",
+    "zod": "4.1.9",
+    "zod-openapi": "^5.4.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/node": "^22.16.0",
-    "pino-pretty": "^13.0.0",
-    "prisma": "^6.11.1",
-    "tsx": "^4.20.3",
-    "typescript": "^5.8.3"
+    "@types/node": "^22.18.5",
+    "pino-pretty": "^13.1.1",
+    "prisma": "^6.16.2",
+    "tsx": "^4.20.5",
+    "typescript": "^5.9.2"
   },
   "prisma": {
     "schema": "./prisma"
